0.7.8   (under development)

    o   new template class Rcpp::fixed_call that can be used in STL algorithms
	such as std::generate.

    o   new template class SimpleMatrix<int> and generated classes
    	IntegerMatrix, RawMatrix, NumericMatrix, ComplexMatrix and 
    	LogicalMatrix. These classes derived from their Vector 
    	equivalent except that their constructors check that their 
    	input is a matrix. The classes don't/can't however guarantee 
    	that the enclosed SEXP will allways be a matrix

    o	RcppExample et al have been moved to a new package RcppExamples;
        src/Makevars and src/Makevars.win simplified accordingly

    o	Improved src/Makevars.win thanks to Brian Ripley

    o	New examples for 'fast lm' using compiled code: 
        - using GNU GSL and a C interface
        - using Armadillo (http://arma.sf.net) and a C++ interface
        Armadillo is seen as faster for lack of extra copying

0.7.7	2010-02-14

    o	new template classes Rcpp::unary_call and Rcpp::binary_call
    	that facilitates using R language calls together 
    	with STL algorithms.
    	
    o	fixed a bug in Language constructors taking a string as their
    	first argument. The created call was wrong.

0.7.6   2010-02-12

    o   SEXP_Vector (and ExpressionVector and GenericVector, a.k.a List) now
	have methods push_front, push_back and insert that are templated

    o   SEXP_Vector now has int- and range-valued erase() members

    o   Environment class has a default constructor (for RInside)

    o   SEXP_Vector_Base factored out of SEXP_Vector (Effect. C++ #44)

    o   SEXP_Vector_Base::iterator added as well as begin() and end()
        so that STL algorithms can be applied to Rcpp objects

    o   CharacterVector gains a random access iterator, begin() and end() to
	support STL algorithms; iterator dereferences to a StringProxy

    o   Restore Windows build; successfully tested on 32 and 64 bit;
